# entity

./: .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  AGENTS.md  ANNOUNCEMENT.md  ARCHITECTURE.md  CHANGELOG.md  CHECKPOINT-48.md  CHECKPOINT_10.md  CHECKPOINT_11.md  CHECKPOINT_18.md  CHECKPOINT_19.md  CHECKPOINT_20.md  CHECKPOINT_21.md  CHECKPOINT_22.md  CHECKPOINT_23.md  CHECKPOINT_24.md  CHECKPOINT_25.md  CHECKPOINT_26.md  CHECKPOINT_27.md  CHECKPOINT_28.md  CHECKPOINT_29.md  CHECKPOINT_30.md  CHECKPOINT_31.md  CHECKPOINT_32.md  CHECKPOINT_34.md  CHECKPOINT_35.md  CHECKPOINT_36.md  CHECKPOINT_37.md  CHECKPOINT_38.md  CHECKPOINT_8.md  CHECKPOINT_9.md  CHECKPOINT_MAIN.md  CLAUDE.md  CODE_METRICS.md  COMPATIBILITY_TIMELINE.md  (+36 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  compatibility-issue.md  config.yml  feature_request.md  migration-help.md  performance-regression.md  question.md
.github/workflows/: ci.yml  plugin-management.yml  publish.yml  quality.yml  release-automation.yml  release.yml  security.yml  test.yml
architecture/: 5_minute_start.md  architecture_models.md  architecture_tasks.md  design_principles.md  frameworks.md  general.md  models.md  overview.md  pipeline_overview.md
assets/: entity_event_loop  entity_event_loop(1).excalidraw
benchmarks/: import_performance.py
common_interfaces/: __init__.py  base_plugin.py  plugins.py  resources.py
config/: __init__.py  config.example.yml  config.yml  dev.yaml  logging_prod.yaml  models.py  prod.yaml  template.yaml
docker/: Dockerfile  README.md
docs/: GPT_OSS_COMPLETENESS_VERIFICATION.md  SKIP_PATTERNS.md  SUBMODULE_GUIDE.md  TYPE_SAFE_MIGRATION.md  generate_config_docs.py  logging_templates.md  migration_from_docker.md  principle_checklist.md  production_deployment.md  quickstart.md  requirements.txt  vllm.md
docs/adr/: 0001-core-architecture.md  0002-module-layout.md  0003-five-minute-start.md
docs/source/: advanced_usage.md  agent_personalities.md  api_reference.md  architecture.md  aws_deployment.md  components_overview.md  conf.py  config.md  config_cheatsheet.md  config_reference.md  (+49 more)
entity/: __init__.py  agent.py  config.py  entity_agenty.py  memory.py  tool_registry.py  tools.py
entity-debug-plugin/: README.md  debug_plugin.py  pyproject.toml
entity-plugin-examples/: pyproject.toml
entity-plugin-gpt-oss/: .gitignore  README.md  pyproject.toml
entity-plugin-gpt-oss/src/entity_plugin_gpt_oss/: __init__.py  adaptive_reasoning.py  developer_override.py  function_schema_registry.py  harmony_safety_filter.py  multi_channel_aggregator.py  native_tools.py  reasoning_analytics_dashboard.py  reasoning_trace.py  structured_output.py
entity-plugin-gpt-oss/tests/: conftest.py  test_adaptive_reasoning.py  test_developer_override.py  test_function_schema_registry.py  test_harmony_safety_filter.py  test_multi_channel_aggregator.py  test_native_tools.py  test_reasoning_analytics_dashboard.py  test_reasoning_trace.py  test_structured_output.py
entity-plugin-stdlib/: LICENSE  Makefile  pyproject.toml
entity-plugin-template/: README.md  pyproject.toml
entity-plugin-template/.github/workflows/: release.yml  test.yml
entity-plugin-template/src/entity_plugin_template/: __init__.py  plugin.py
entity-plugin-template/tests/: test_integration.py  test_plugin.py
examples/: README.md  __init__.py  advanced_llm.py  advanced_workflow.py  advanced_workflow.yaml  basic_config.yaml  basic_workflow.yaml  bedrock_deploy.py  cache_example.py  config_reload_example.py  default_agent.py  factory_methods.py  failure_example.py  http_server.py  kitchen_sink.py  memory_agent.py  minimal_agent.py  observability_metrics.py  observability_tracing.py  pipeline_example.py  plugin_loader.py  prompt_config.yml  storage_resource_example.py  structured_logging_example.py  vector_memory_pipeline.py  zero_config_agent.py
examples/entity-training/: .env.example  .gitignore  README.md  pyproject.toml  setup.cfg
examples/entity-training/data/: sample.jsonl
examples/entity-training/plugins/: __init__.py
examples/entity-training/tests/: __init__.py  test_setup.py  test_validation.py
plugin_library/: README.md  __init__.py
plugins/: __init__.py  classifier.py  fun_fact_tool.py  memory_tools.py  test_plugins.py
plugins_user/: README.md  __init__.py  fun_fact_tool.py  memory_tools.py
scripts/: add_plugin_submodules.sh  clean_plugin_directories.sh  create_plugin_repos.sh  plugin_check_versions.sh  plugin_create_new.sh  plugin_list_prs.sh  plugin_update_all.sh  push_plugin_code.sh  run_postgres_dev.py  test_tts.py  test_tts_integration.py  test_with_docker.sh  update_plugin_imports.sh  validate_migration.sh  verify_gpt_oss_completeness.py
src/: agent.py  app.py  application_layer.py  chat_cli.py  cli.py  config.py  create_schema.py  legacy_agent.py  memory.py  tool_registry.py  tools.py
tests/: AGENTS.md  Dockerfile  conftest.py  docker-compose.yml  plugin_test_base.py  slow_plugin.py  test_adapters_grpc_optional.py  test_agent.py  test_agent_default_config.py  test_agent_factories.py  test_agent_from_directory.py  test_agent_from_package.py  test_agent_plugin.py  test_agent_runtime.py  test_agent_simple_config.py  test_agent_workflows.py  test_architecture_patterns.py  test_async_patterns.py  test_auto_classifier_marking.py  test_auto_classifier_tools.py  test_auto_install.py  test_bedrock_resource.py  test_builder_logging_injection.py  test_builder_stage_resolution.py  test_builtin_resource_configs.py  test_cache.py  test_calculator_tool.py  test_calculator_tool_hypothesis.py  test_call_llm_logging.py  test_chain_of_thought_prompt.py  test_circuit_breaker.py  test_claude_resource.py  test_cli.py  test_cli_adapter.py  test_cli_basic.py  test_cli_entrypoint.py  test_cli_generated_examples.py  test_cli_get_stats.py  test_cli_reload.py  test_cli_validate_failures.py  (+176 more)
tools/: check_empty_dirs.py  generate_plugin_schemas.py  graph_dependencies.py  pipeline_viz.py
user_plugins/: __init__.py  test_plugins.py
(+1307 files in other folders)
