[tool.poetry]
name = "entity-debug-plugin"
version = "0.1.0"
description = "Debug plugin for Entity"
authors = ["Example <example@example.com>"]
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
entity = { path = "../", develop = true }

[tool.entity.plugins.prompts.debug_prompt]
class = "debug_plugin:DebugPrompt"
