[tool.poetry]
name = "entity-plugin-gpt-oss"
version = "0.1.0"
description = "GPT-OSS integration plugins for Entity Framework"
authors = ["Entity Framework Contributors <entity@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "entity_plugin_gpt_oss", from = "src"}]
repository = "https://github.com/Ladvien/entity-plugin-gpt-oss"
documentation = "https://entity-plugin-gpt-oss.readthedocs.io"
keywords = ["entity", "plugin", "gpt-oss", "ai", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.11"
entity-core = "^0.0.12"
pydantic = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.4.0"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
lint.ignore = ["E501"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]